# Robot_Fish

./: launch_xacro.txt  shark_compare.txt  test.urdf
.marscode/: deviceInfo.json
devel/: .catkin  .rosinstall  setup.sh
devel/include/cabin_behaviors/: PIDTrackingConfig.h
devel/include/cabin_controllers/: VehiclePropertiesConfig.h
devel/include/cabin_msgs/: AttitudeCommand.h  ControlStatus.h  Depth.h  DepthCommand.h  Imu.h  LinearCommand.h  NetLoad.h  Pwm.h  PwmStamped.h  ResetControls.h  SwitchState.h  Thrust.h  ThrustStamped.h
devel/lib/cabin_behaviors/: pid_tracking
devel/lib/cabin_controllers/: thruster_controller_gazebo_sim
devel/lib/cabin_teleop/: logicool_controller  t4_controller
devel/lib/cabin_vision/: object_deviation
devel/lib/pkgconfig/: cabin_behaviors.pc  cabin_controllers.pc  cabin_msgs.pc  cabin_teleop.pc  cabin_vision.pc  darknet_ros_msgs.pc  robot_shark_description.pc  shark-asm03.pc  shark_description.pc  shark_test_description.pc  uuv_assistants.pc  uuv_auv_control_allocator.pc  uuv_control_cascaded_pid.pc  uuv_gazebo.pc  (+18 more)
src/robot_shark_description/: CMakeLists.txt  package.xml  readme.md
src/shark_asm03/: CMakeLists.txt
src/shark_asm03/config/: joint_names_shark-asm03.yaml  tail_controller.yaml  thruster_config.yaml
src/shark_asm03/launch/: display.launch  gazebo.launch  shark_world.launch  tail_wave_gazebo.launch  tail_wave_test.launch  test_shark.launch  upload_shark.launch
src/shark_asm03/urdf/: shark-gazebo.urdf  shark_asm03.csv  shark_asm03.urdf  shark_gazebo.xacro  shark_model.xacro
src/shark_description/: CMakeLists.txt  package.xml
src/shark_test_description/: CMakeLists.txt  package.xml  readme.md
src/uuv_simulator/shark_description/: CMakeLists.txt
src/uuv_simulator/shark_description/launch/: upload.launch  world.launch
src/uuv_simulator/shark_description/robots/: default.xacro
src/uuv_simulator/shark_description/urdf/: base.xacro  gazebo.xacro  snippets.xacro
(+195 files in other folders)
